# unp_prac

./: CMakeLists.txt  client.c  readme.md  server.c  unp_prac.h  unp_prac.h.h
echo/: a.out  echo_client.c  echo_server.c
lib/: error.c  inet_ntop.c  inet_ntop.h  inet_pton.c  inet_pton.h
lib_io/: readline.c  readn.c  writen.c
select/: select_echo_server.cpp  select_echo_server.h
simple/: client.c  server.c  simple_client.c
博客/: 1.套接字编程基础.md  2.基本套接字函数.md  3.io多路复用.md  socket API和TCP-IP协议学习.md
